kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: vproapp
   labels:
      app: vproapp
spec:
   replicas: 1 
   selector:
      matchLabels:
         app: vproapp
   template:
      metadata:
         labels:
            app: vproapp
      spec:
         containers:
         - name: vproapp
           image: sidnal08/vprofileapp
           imagePullPolicy: Always
           ports:
           - containerPort: 8080
