kubedefs/dbdeploy.yaml
apiVersion: app/v1
kind: Deployment
metadata:
   name: vprodb
   labels:
      app: vprodb
spec:
   replicas: 1
   selector:
      matchLabels:
         app: vprodb
   template:
      metadata:
         labels:
            app: vprodb
      spec:
         containers:
         - name: vprodb
           image: sidnal08/vprofiledb
           imagePullPolicy: Always
           ports:
           - name: vprodb-port
             containerPort: 3306
           volumeMounts:
           - mountPath: /var/lib/mysql
             name: vpro-db-data
         volumes:
         - name: vpro-db-data
           persistentVolumeClaim:
             claimName: db-pv-claim
