kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: vpromq01
   labels:
      app: vpromq01
spec:
   replicas: 1
   selector:
      matchLabels:
         app: vpromq01
   template:
      metadata: 
         labels:
            app: vpromq01
      spec:
         containers:
         - name: vpromq01
           image: rabbitmq:latest
           ports:
           - name: vpromq-port
             containerPort: 5672
