kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
   name: vprocache01
spec:
   type: ClusterIP
   ports:
   - port: 11211
     targetPort: vpromc-port
     protocol: TCP
   selector:
      app: vpromc
