kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata: 
   name: vpromq01
spec:
   type: ClusterIP
   ports:
   - port: 5672
     targetPort: vpromq-port
     protocol: TCP
   selector:
      app: vpromq01
