kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "vprofile.devopswithsiddharth.live"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vproapp-service
            port:
              number: 8080
